        Planner: added a highlight for Off Timetable students in View Lesson Plan attendance list
        Planner: added a button to access Linked Markbook from Edit Lesson Plan page
        Planner: added a highlight for Off Timetable Lessons in the "Year Overview" mode
        Planner: added the option to use smart block names as lesson names in Deploy Lessons
        Planner: restricted visibility of user photos in Lesson Plans based on planner access permissions
        Reports: updated Attendance data source to handle Off Timetable days where no attendance is taken
        Reports: prevented deletion of template assets that are not set to inactive
        Reports: added a way for tracking and displaying who last edited an asset
        Staff: limited Add Staff list to users who are not already staff but have a staff role
        Staff: added an option to separate the Staff Duty page into tabs by duty type
        Students: fixed error on student profile related to a typo in studentMenuCategory variable
        System Admin: added the option to upload user photos in jpeg format
        System Admin: added new loaned items import for Library
        Timetable: added coverage details for staff duty and activities on the timetable
        User Admin: added Sibling as option to Emergency Relationship select
        User Admin: added Prof. as an option in Title select

    Bug Fixes
        System: fixed toggle field direction for right-to-left languages
        System: fixed uninitialized variable PHP warnings on Parent Dashboard
        System: fixed login options not working when using SSO button
        System: fixed login redirect after public registration
        System: fixed redirect logic in Payment class causing unnecessary error logs
        Data Updater: fixed attachments being cleared when new data updates are submitted
        Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report