@@ -205,6 +205,11 @@ if (isActionAccessible($guid, $connection2, '/modules/Planner/planner_edit.php')
                     $customRequireFail = false;
                     $fields = $container->get(CustomFieldHandler::class)->getFieldDataFromPOST('Lesson Plan', [], $customRequireFail);
 
+                    if (isset($_POST['videoLink'])) {
+                        $fields = !empty($fields) ? json_decode($fields, true) : [];
+                        $fields = json_encode(['videoLink'=> $_POST['videoLink'] ?? ''] + $fields);
+                    }
+
                     if ($viewBy == '' or $gibbonCourseClassID == '' or $date == '' or $timeStart == '' or $timeEnd == '' or $name == '' or $homework == '' or $viewableParents == '' or $viewableStudents == '' or ($homework == 'Y' and ($homeworkDetails == '' or $homeworkDueDate == ''))) {
                         $URL .= "&return=error3$params";
                         header("Location: {$URL}");
